--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
       align-items: center;
       gap: 60px;
     }
-
+<div class="hero-right">
+    <div class="profile-frame">
+        <img src="images/WhatsApp Image 2026-02-10 at 1.35.08 PM.jpg" alt="Piyush Sharma">
+    </div>
+</div>
     .hero span { color: var(--accent); }
 
     .hero small {
@@ -343,3 +347,4 @@
 
 </body>
 </html>
+
