--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
   <div class="hero-right" data-aos="fade-left">
     <div class="profile-frame">
-      <img src="images/profile.jpg" alt="Piyush Sharma">
+      <img src="images/profile.jpeg" alt="Piyush Sharma">
     </div>
 
     <lottie-player
@@ -343,5 +343,6 @@
 
 </body>
 </html>
+
 
 
