--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
 <section id="work">
   <h2 data-aos="fade-up">Featured Work</h2>
   <div class="portfolio-grid">
-    <div class="work" data-aos="fade-up"></div>
+    <div class="work" data-aos="fade-up">
+      <img src="images/frame01" alt="Piyush Sharma">
+    </div>
     <div class="work" data-aos="fade-up"></div>
     <div class="work" data-aos="fade-up"></div>
     <div class="work" data-aos="fade-up"></div>
@@ -343,6 +345,7 @@
 
 </body>
 </html>
+
 
 
 
