--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
   <h2 data-aos="fade-up">Featured Work</h2>
   <div class="portfolio-grid">
     <div class="work" data-aos="fade-up">
-      <img src="images/frame01" alt="Piyush Sharma">
+      <img src="images/frame01.jpeg" alt="Piyush Sharma">
     </div>
     <div class="work" data-aos="fade-up"></div>
     <div class="work" data-aos="fade-up"></div>
@@ -345,6 +345,7 @@
 
 </body>
 </html>
+
 
 
 
